--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,67 @@
+/*CSS RESET*/
+html, body, div, span, applet, object, iframe,	
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+html {
+	  height: 100%;
+	 }
+body {
+	  height: 100%;
+	  font: 14px/18px 'Times New Roman', Times, sans-serif;
+	  background-color: #FFF;
+      }
+ol, ul {
+	    list-style: none;
+        }
+* {
+	margin: 0;
+	padding: 0;
+	outline: none;
+
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+a, a:hover {
+	text-decoration: none;
+}
+
+.clearfix:before,
+.clearfix:after {
+				 content: " ";
+				 display: table;
+}
+
+.clearfix:after {
+	clear: both;
+}
+
+.left {
+	float: left;
+}
+.right{
+	float: right;
+}
+
+/*STYLES*/
 @font-face {
 	font-family: 'Myriad Pro Regular';
 	src: url('../fonts/MyriadPro-Regular.eot');
@@ -50,7 +114,6 @@ header {
 			line-height: 18px;
 			text-transform: uppercase;
 			margin-top: 27px;
-			letter-spacing: 0.075em;
 		}
 
 	.header-banner {
@@ -73,7 +136,6 @@ header {
 			line-height: 18px;
 			font-weight: bold;
 			font-style: italic;
-			letter-spacing: -0.05em;
 			margin-top: 13px;
 			float: right;
 		}
@@ -127,10 +189,11 @@ header {
 		padding: 2px 23px;
 		font-size: 12px;
 		line-height: 18px;
-		padding-top: 5px;
+		padding-top: 6px;
 
 		white-space: normal;
 	}
+
 		.header-submenu a,
 		.header-submenu form {
 			display: inline;
@@ -152,10 +215,6 @@ header {
 			border: none;
 			background-color: #666;
 		}
-
-			.header-submenu input:hover {
-				background-color: white;
-			}
 			
 			.header-submenu input:focus {
 				background-color: white;
@@ -181,7 +240,7 @@ header {
 
 			.header-submenu span {
 				float: right;
-				margin: -1px 5px 0 0;
+				margin: -2px 5px 0 0;
 			}
 
 				.header-submenu span:before {
@@ -212,11 +271,12 @@ nav.main-nav {
 	nav.main-nav ul {
 		width: 100%;
 		text-align: justify;
+		margin-top: -1px;
 	}
 
 	nav.main-nav ul li {
 		display: inline;
-		margin-right: 78px;
+		margin-right: 79px;
 	}
 
 	nav.main-nav ul li:first-child{
@@ -229,8 +289,8 @@ nav.main-nav {
 		nav.main-nav ul > li a {
 			color: white;
 			border-bottom: 1px solid white;
-			font-size: 16.11px;
-			line-height: 18.64px;
+			font-size: 16px;
+			line-height: 19px;
 			white-space: nowrap;
 		}
 		nav.main-nav ul > li a:hover {
@@ -346,7 +406,7 @@ main {
 
 				.category-item a{
 					color: #005bc1;
-					font-size: 15.01px;
+					font-size: 15px;
 					border-bottom: 1px solid #005bc1;
 				}
 
@@ -431,7 +491,7 @@ footer {
 			.footer-logo h2 {
 				font-size: 9px;
 				text-transform: uppercase;
-				line-height: 6.76px;
+				line-height: 7px;
 				margin-top: 4px;
 			}
 
@@ -752,7 +812,7 @@ body {
 
 					.catalog li a {
 						font-size: 15px;
-						line-height: 29.41px;
+						line-height: 29px;
 					}
 
 		.categoties {
